KO - Fixing spacing for mobile on hamburger menu

--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -11,7 +11,9 @@
       align-items: center;
       font-size: 1.8rem;
       cursor: pointer;
-      margin-left: 10px;
+      /* margin-left: 10px; */
+      margin-top: 20%;
+      padding: 10px;
     }
   }
   
